[package]
name = "win32-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.31" }

[features]
net = ["windows/Win32_Networking_WinSock"]
window = ["windows/Win32_UI_WindowsAndMessaging"]
instance = ["windows/Win32_System_Threading", "windows/Win32_Security"]
console = ["windows/Win32_System_Console", "windows/Win32_UI_WindowsAndMessaging", "windows/Win32_System_Threading"]

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
