[package]
name = "win32-utils"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
description = "Assorted utility functions for Win32 programming in Rust"
repository = "https://github.com/jacob-pro/win32-utils"
homepage = "https://github.com/jacob-pro/win32-utils"

[dependencies]
thiserror = { version = "1.0.31" }

[features]
net = ["windows/Win32_Networking_WinSock"]
window = ["windows/Win32_UI_WindowsAndMessaging"]
instance = ["windows/Win32_System_Threading", "windows/Win32_Security"]
console = ["windows/Win32_System_Console", "windows/Win32_UI_WindowsAndMessaging", "windows/Win32_System_Threading"]

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
